--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </style>
 </head>
 <body>
-  <div class="main">
+  <main>
     <div>
       <div class="adivice-card">
         <h2 class="advice-1d" id="adiAdviceID">Advice </h2>
@@ -114,7 +114,7 @@
         Coded by <a href="#">Hussein Salami</a>.
       </div>
     </div>
-  </div>
+  </main>
     
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js" integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
